WebCore:

Reviewed by Simon Fraser.

        REGRESSION (r41238) Repainted portion of a scaled image does not line up with full image
        https://bugs.webkit.org/show_bug.cgi?id=26747
        rdar://problem/7009243

        Test: fast/repaint/background-misaligned.html

        * platform/graphics/Image.cpp:
        (WebCore::Image::drawTiled): Moved a variable definition closer to where
        it is used.
        * platform/graphics/cg/ImageCG.cpp:
        (WebCore::BitmapImage::draw): In the subimage code path, compute a
        pixel-aligned source rect, because the subiamge is always pixel-aligned
        in source space, and adjust the destination rect to preserve the
        source -> destination mapping. Clip to the (original) destination rect
        to prevent bleeding out.

LayoutTests:

        Reviewed by Simon Fraser.

        REGRESSION (r41238) Repainted portion of a scaled image does not line up with full image
        https://bugs.webkit.org/show_bug.cgi?id=26747
        rdar://problem/7009243

        * fast/repaint/background-misaligned.html: Added.
        * platform/mac/fast/backgrounds/size/backgroundSize15-expected.checksum:
        * platform/mac/fast/backgrounds/size/backgroundSize15-expected.png:
        * platform/mac/fast/borders/border-image-rotate-transform-expected.checksum:
        * platform/mac/fast/borders/border-image-rotate-transform-expected.png:
        * platform/mac/fast/repaint/background-misaligned-expected.checksum: Added.
        * platform/mac/fast/repaint/background-misaligned-expected.png: Added.
        * platform/mac/fast/repaint/background-misaligned-expected.txt: Added.



Canonical link: https://commits.webkit.org/37626@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46002 268f45cc-cd09-0410-ab3c-d52691b4dbfc