WebCore/platform/graphics/cg/ImageCG.cpp
@@ -166,32 +166,44 @@ void BitmapImage::draw(GraphicsContext* ctxt, const FloatRect& destRect, const F
         // interpolation smoothes sharp edges, causing pixels from outside the source rect to bleed
         // into the destination rect. See <rdar://problem/6112909>.
         shouldUseSubimage = (interpolationQuality == kCGInterpolationHigh || interpolationQuality == kCGInterpolationDefault) && srcRect.size() != destRect.size();
+        float xScale = srcRect.width() / destRect.width();
+        float yScale = srcRect.height() / destRect.height();
         if (shouldUseSubimage) {
-            image = CGImageCreateWithImageInRect(image, srcRect);
+            FloatRect subimageRect = srcRect;
+            float leftPadding = srcRect.x() - floorf(srcRect.x());
+            float topPadding = srcRect.y() - floorf(srcRect.y());
+
+            subimageRect.move(-leftPadding, -topPadding);
+            adjustedDestRect.move(-leftPadding / xScale, -topPadding / yScale);
+
+            subimageRect.setWidth(ceilf(subimageRect.width() + leftPadding));
+            adjustedDestRect.setWidth(subimageRect.width() / xScale);
+
+            subimageRect.setHeight(ceilf(subimageRect.height() + topPadding));
+            adjustedDestRect.setHeight(subimageRect.height() / yScale);
+
+            image = CGImageCreateWithImageInRect(image, subimageRect);
             if (currHeight < srcRect.bottom()) {
                 ASSERT(CGImageGetHeight(image) == currHeight - CGRectIntegral(srcRect).origin.y);
-                adjustedDestRect.setHeight(destRect.height() / srcRect.height() * CGImageGetHeight(image));
+                adjustedDestRect.setHeight(CGImageGetHeight(image) / yScale);
             }
         } else {
-            float xScale = srcRect.width() / destRect.width();
-            float yScale = srcRect.height() / destRect.height();
-
             adjustedDestRect.setLocation(FloatPoint(destRect.x() - srcRect.x() / xScale, destRect.y() - srcRect.y() / yScale));
             adjustedDestRect.setSize(FloatSize(selfSize.width() / xScale, selfSize.height() / yScale));
-
-            CGContextClipToRect(context, destRect);
         }
+
+        CGContextClipToRect(context, destRect);
     }
 
     // If the image is only partially loaded, then shrink the destination rect that we're drawing into accordingly.
     if (!shouldUseSubimage && currHeight < selfSize.height())
         adjustedDestRect.setHeight(adjustedDestRect.height() * currHeight / selfSize.height());
 
-    // Flip the coords.
     ctxt->setCompositeOperation(compositeOp);
-    CGContextTranslateCTM(context, adjustedDestRect.x(), adjustedDestRect.bottom());
+
+    // Flip the coords.
     CGContextScaleCTM(context, 1, -1);
-    adjustedDestRect.setLocation(FloatPoint());
+    adjustedDestRect.setY(-adjustedDestRect.bottom());
 
     // Draw the image.
     CGContextDrawImage(context, adjustedDestRect, image);
